plugins {
    id 'java'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
}

version = '1.0.0'
group = 'com.derko.seamlessapi'

base {
    archivesName = 'seamlessapi'
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(17)
    withSourcesJar()
}

minecraft {
    mappings channel: 'official', version: minecraft_version

    runs {
        client {
            workingDirectory project.file('run')
            mods {
                seamlessapi {
                    source sourceSets.main
                }
            }
        }
    }
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    minecraft "net.minecraftforge:forge:${forge_version}"
}

tasks.withType(ProcessResources).configureEach {
    filesMatching(['META-INF/mods.toml']) {
        expand([
            version                : project.version,
            loader_version_range   : loader_version_range,
            minecraft_version_range: minecraft_version_range
        ])
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
            artifactId = 'seamlessapi'
            groupId = 'com.derko.seamlessapi'
            version = project.version
        }
    }
    repositories {
        mavenLocal()
    }
}
